<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/first_name_text"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:text="First name: (*)"
        android:textColor="@color/material_dynamic_primary50"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/last_name_text"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:text="Last name: (*)"
        android:textColor="@color/material_dynamic_primary50"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/number_text"
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:text="Phone Number:(*)"
        android:textColor="@color/material_dynamic_primary50"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/dealer_text"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:text="Email: (*)"
        android:textColor="@color/material_dynamic_primary50"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:inputType="text"
        />

    <Button
        android:id="@+id/dealer_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="Add dealer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>