...
        android:layout_height="wrap_content"
        android:text="DEALER OF CAR (*):"
        android:textSize="25sp"
        android:textColor="@color/material_dynamic_primary50"
        />
    <Spinner
        android:id="@+id/dealer_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/create_car"
...
