<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="presentation.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FILTER (Fields marked * are mandatory)"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textColor="@color/material_dynamic_neutral_variant40"
        />


    <TextView
        android:id="@+id/maket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MAKE (*)"
        android:textSize="25sp"
        android:textColor="@color/material_dynamic_primary50"
        />
    <Spinner
        android:id="@+id/make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"/>
    <TextView
        android:id="@+id/modelt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MODEL (*)"
        android:textSize="25sp"
        android:textColor="@color/material_dynamic_primary50"
        />

    <Spinner
        android:id="@+id/model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/transt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TRANSMISSION (*)"
        android:textSize="25sp"
        android:textColor="@color/material_dynamic_primary50"
        />

    <Spinner
        android:id="@+id/trans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/fuelt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FUEL (*)"
        android:textSize="25sp"
        android:textColor="@color/material_dynamic_primary50"
        />

    <Spinner
        android:id="@+id/fuel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/yeart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please fill the min year (*)"
        android:textSize="25sp"
        android:textColor="@color/material_dynamic_primary50"
        />

    <EditText
        android:id="@+id/yearSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:queryHint="search min year"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/kmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please fill the max KM (*)"
        android:textSize="25sp"
        android:textColor="@color/material_dynamic_primary50"
        />
    <EditText
        android:id="@+id/kmSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:inputType="number"
        android:queryHint="search max kilometer"
        />
    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="search"
        android:onClick="SearchOnClick"/>






</LinearLayout>