<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="presentation.FavoriteActivity"
    android:orientation="horizontal">
    

    <ImageView
        android:id="@+id/imageIcon2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_weight="1"
        tools:srcCompat="@drawable/display" />

    <ListView
        android:id="@+id/favoriteList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



</LinearLayout>