...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="presentation.CarActivity">


    <Button
        android:id="@+id/buyButton"
        android:layout_width="224dp"
        android:layout_height="80dp"
        android:layout_marginLeft="550dp"
        android:layout_marginTop="15dp"
        android:text="Buy" />

...
        android:layout_height="350dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/display"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/addFavorite"
        android:layout_width="240dp"
        android:layout_height="81dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="150dp"
        android:text="add favorite"
...
