...
                android:textColor="@color/dark_purple"
                android:textSize="25sp" />

        </LinearLayout>

        <Button
            android:id="@+id/confirmBuy"
            android:layout_width="778dp"
            android:layout_height="173dp"
            android:text="CONFIRM PURCHASE"
            android:textSize="34sp" />
    </LinearLayout>

...
